adding second notebook

--- a/notebooks/polars_exercises.ipynb
+++ b/notebooks/polars_exercises.ipynb
@@ -777,11 +777,11 @@
         "- With completeness >= 60%\n",
         "- Sorted by completeness (best first)\n",
         "\n",
-        "## Your Task
-Filter the data using all the columns you've created, then export to CSV.
-
-## Hints
-- Use multiple `.filter()` statements or combine with `&`
+        ""## Your Task\n",
+        "Filter the data using all the columns you've created, then export to CSV.\n",
+        "\n",
+        "## Hints\n",
+        - Use multiple `.filter()` statements or combine with `&`
 - Use `.sort()` to order results
 - Use `.write_csv()` to export
 
