--- a/notebooks/polars_exercises.ipynb
+++ b/notebooks/polars_exercises.ipynb
@@ -760,7 +760,7 @@
         "- Data quality trends (if you had date_added field)"
       ]
     },
-    {
+{
       "cell_type": "markdown",
       "metadata": {
         "id": "ex7"
@@ -777,15 +777,15 @@
         "- With completeness >= 60%\n",
         "- Sorted by completeness (best first)\n",
         "\n",
-        ""## Your Task\n",
+        "## Your Task\n",
         "Filter the data using all the columns you've created, then export to CSV.\n",
         "\n",
         "## Hints\n",
-        - Use multiple `.filter()` statements or combine with `&`
-- Use `.sort()` to order results
-- Use `.write_csv()` to export
-
-## Try It:"
+        "- Use multiple `.filter()` statements or combine with `&`\n",
+        "- Use `.sort()` to order results\n",
+        "- Use `.write_csv()` to export\n",
+        "\n",
+        "## Try It:"
       ]
     },
     {
